--- a/hakyll.cabal
+++ b/hakyll.cabal
@@ -112,6 +112,27 @@ Library
   Exposed-Modules:
     Hakyll
     Hakyll.Commands
+    Hakyll.Core.Compiler
+    Hakyll.Core.Compiler.Internal
+    Hakyll.Core.Configuration
+    Hakyll.Core.Dependencies
+    Hakyll.Core.File
+    Hakyll.Core.Identifier
+    Hakyll.Core.Identifier.Pattern
+    Hakyll.Core.Item
+    Hakyll.Core.Logger
+    Hakyll.Core.Metadata
+    Hakyll.Core.Provider
+    Hakyll.Core.Provider.Metadata
+    Hakyll.Core.Routes
+    Hakyll.Core.Rules
+    Hakyll.Core.Rules.Internal
+    Hakyll.Core.Runtime
+    Hakyll.Core.Store
+    Hakyll.Core.UnixFilter
+    Hakyll.Core.Util.File
+    Hakyll.Core.Util.String
+    Hakyll.Core.Writable
     Hakyll.Main
     Hakyll.Web.CompressCss
     Hakyll.Web.Feed
@@ -128,7 +149,15 @@ Library
     Hakyll.Web.Template.List
 
   Other-Modules:
+    Data.List.Extended
+    Data.Yaml.Extended
     Hakyll.Check
+    Hakyll.Core.Compiler.Require
+    Hakyll.Core.Identifier.Pattern.Internal
+    Hakyll.Core.Item.SomeItem
+    Hakyll.Core.Provider.Internal
+    Hakyll.Core.Provider.MetadataCache
+    Hakyll.Core.Util.Parser
     Paths_hakyll
 
   Build-Depends:
@@ -160,8 +189,7 @@ Library
     vector               >= 0.11     && < 0.13,
     yaml                 >= 0.8.11   && < 0.9,
     optparse-applicative >= 0.12     && < 0.15,
-    file-embed           >= 0.0.10.1 && < 0.0.11,
-    hakyll-core
+    file-embed           >= 0.0.10.1 && < 0.0.11
 
   If flag(previewServer)
     Build-depends:
@@ -212,6 +240,16 @@ Test-suite hakyll-tests
   Default-language: Haskell2010
 
   Other-modules:
+    Hakyll.Core.Dependencies.Tests
+    Hakyll.Core.Identifier.Tests
+    Hakyll.Core.Provider.Metadata.Tests
+    Hakyll.Core.Provider.Tests
+    Hakyll.Core.Routes.Tests
+    Hakyll.Core.Rules.Tests
+    Hakyll.Core.Runtime.Tests
+    Hakyll.Core.Store.Tests
+    Hakyll.Core.UnixFilter.Tests
+    Hakyll.Core.Util.String.Tests
     Hakyll.Web.CompressCss.Tests
     Hakyll.Web.Html.RelativizeUrls.Tests
     Hakyll.Web.Html.Tests
@@ -232,8 +270,7 @@ Test-suite hakyll-tests
     filepath             >= 1.0      && < 1.5,
     text                 >= 0.11     && < 1.3,
     unordered-containers >= 0.2      && < 0.3,
-    yaml                 >= 0.8.11   && < 0.9,
-    hakyll-core
+    yaml                 >= 0.8.11   && < 0.9
 
   If flag(previewServer)
     Cpp-options:
@@ -266,8 +303,7 @@ Executable hakyll-init
     hakyll,
     base      >= 4   && < 5,
     directory >= 1.0 && < 1.4,
-    filepath  >= 1.0 && < 1.5,
-    hakyll-core
+    filepath  >= 1.0 && < 1.5
 
 Executable hakyll-website
   Main-is:          site.hs
@@ -285,5 +321,4 @@ Executable hakyll-website
     base      >= 4     && < 5,
     directory >= 1.0   && < 1.4,
     filepath  >= 1.0   && < 1.5,
-    pandoc    >= 2.0.5 && < 2.3,
-    hakyll-core
+    pandoc    >= 2.0.5 && < 2.3
