Fix errorneos deletion
The build succeeded.

--- a/hakyll/hakyll.cabal
+++ b/hakyll/hakyll.cabal
@@ -81,6 +81,7 @@ Library
   Exposed-Modules:
     Hakyll
     Hakyll.Commands
+    Hakyll.Main
     Hakyll.Web.CompressCss
     Hakyll.Web.Feed
     Hakyll.Web.Html
