--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_install:
   - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
 install:
-  - stack --no-terminal build --only-dependencies
+  - stack --no-terminal build --only-dependencies --test
 
 script:
-  - stack --no-terminal build
+  - stack --no-terminal build --test --haddock --no-haddock-deps
 
 cache:
   directories:
