Fix https://github.com/jaspervdj/hakyll/issue/682 (part 1)
This issue was born by https://github.com/jaspervdj/hakyll/pull/666 .
Because 2018-09-26.md isn't listed in extra-source-files, that test
fails.

--- a/hakyll.cabal
+++ b/hakyll.cabal
@@ -68,6 +68,7 @@ Extra-source-files:
   tests/data/partial.html
   tests/data/partial.html.out
   tests/data/posts/2010-08-26-birthday.md
+  tests/data/posts/2018-09-26.md
   tests/data/russian.md
   tests/data/strip.html
   tests/data/strip.html.out
